--- a/README
+++ b/README
@@ -1,17 +1,16 @@
-phpCrypt 0.3
+phpCrypt 0.3.1
 Ryan Gilfether
 http://www.gilfether.com/phpcrypt
 
+
 About
-============
+=============
 phpCrypt is an Open Source PHP Encryption library that does not require
 or use the mCrypt or any other PHP extension. It's not as fast
 as PHP's mCrypt extention, however if you are in a situation where you
 can not use the mCrypt library, phpCrypt is a suitable alternative.
 
 This version of phpCrypt requires PHP 5.3 or later.
-
-View the 'examples' directory to see examples of phpCrypt in use.
 
 Please visit phpCrypt's website for a list of options and constants
 used in phpCrypt. phpCrypt's website also lists the required key
@@ -22,8 +21,29 @@ All Cipher algorithms were implemented using freely available resources
 found online and in books.
 
 
+Documentation
+=============
+The 'examples' directory has demo code of phpCrypt in use. Below is an
+example of encrypting a string.
+
+<?php
+include("/path/to/phpCrypt.php");
+use PHP_Crypt\PHP_Crypt as PHP_Crypt;
+
+$data = "This is my secret message.";
+$key  = "MySecretKey01234";
+$crypt = new PHP_Crypt($key, PHP_Crypt::CIPHER_AES_128, PHP_Crypt::MODE_CTR);
+
+$iv = $crypt->createIV();
+$encrypt = $crypt->encrypt($data);
+
+$crypt->setIV($iv);
+$decrypt = $crypt->decrypt($encrypt);
+?>
+
+
 GPL Stuff
-============
+=============
 This file is part of phpCrypt
 
 phpCrypt is free software: you can redistribute it and/or modify
